# argmas_auto

./: .gitignore  README.md  pyproject.toml
argmas_auto/: __main__.py  argumentation_agent.py  argumentation_model.py
argmas_auto/arguments/: Argument.py  Comparison.py  CoupleValue.py
argmas_auto/communication/agent/: CommunicatingAgent.py
argmas_auto/communication/mailbox/: Mailbox.py
argmas_auto/communication/preferences/: CriterionValue.py  Item.py  Preferences.py  Value.py
tests/: test_communications.py
