[tool.poetry]
name = "argmas-auto"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "argmas_auto"}]

[tool.poetry.dependencies]
python = "^3.9"
mesa = "^1.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
